# turnstile

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.examples.yml  docker-compose.yml  pyproject.toml  worker.py
app/: __init__.py  main.py  tasks.py
app/api/: router.py
app/api/routes/: health.py  image.py  jobs.py  ops.py  (+1 more)
app/core/: __init__.py  celery_app.py  config.py
app/models/: __init__.py  capability.py  health.py  image.py  job.py  ops.py  service.py
app/services/: adapters.py  capabilities.py  definition_loader.py  job_store.py  jobs.py  ops.py  orchestrator.py  readiness.py  registry.py  runtime.py
config/capabilities/: audio_transcribe.yaml  example_command_run.yaml  example_http_echo.yaml  example_http_gpu_echo.yaml  image_generate.yaml
config/requests/: audio_transcribe.request.json  example_command_run.request.json  example_http_echo.request.json  image_generate.request.json
config/responses/: job_accepted.response.json
config/schemas/: capability.schema.json  service.schema.json
config/services/: mock_audio_transcriber.yaml  mock_command_alpha.yaml  mock_command_beta.yaml  mock_gpu_http_alpha.yaml  mock_gpu_http_beta.yaml  mock_http_alpha.yaml  mock_http_beta.yaml  mock_image_generator.yaml
docs/: deployment.md  rfc-0001-turnstile-v1.md  smoke-test.md  testing-backends.md
scripts/: run_integration_tests.sh  smoke_test.sh
tests/: conftest.py  test_adapters.py  test_api.py  test_definitions.py  test_jobs.py  test_packaging.py  test_runtime.py
tests/integration/: test_acceptance_integration.py
(+4 files in other folders)
