[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turnstile"
version = "0.1.1"
description = "Resource-aware API broker for scarce local compute"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4,<6",
  "docker>=7.0,<8",
  "fastapi>=0.116,<1",
  "flower>=2.0,<3",
  "httpx>=0.27,<1",
  "jsonschema>=4.25,<5",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.28,<3",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools]
packages = ["app", "app.api", "app.api.routes", "app.core", "app.models", "app.services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = []

[tool.pytest.ini_options]
markers = [
  "integration: exercises the live Docker-backed Turnstile stack",
  "gpu_eviction: covers warm GPU reuse and eviction handoff",
]

[[tool.mypy.overrides]]
module = ["celery.*", "docker.*", "fakeredis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tasks"]
disallow_untyped_decorators = false
